# qspcplay

./: CMakeLists.txt  main.cpp  main.qml
src/: main.cpp  main.qml  state.cpp  state.h
src/util/: mv.h
